syntax = "proto3";

package marketdata;

message SubscriptionRequest {
    int32 instrument_id = 1;
    enum RequestType {
        SUBSCRIBE = 0;
        UNSUBSCRIBE = 1;
    }
    RequestType type = 2;
}

message Level {
    float price = 1;
    int32 quantity = 2;
}

message OrderBookData {
    repeated Level bids = 1;
    repeated Level asks = 2;
}

message MarketDataResponse {
    int32 instrument_id = 1;
    enum ResponseType {
        SNAPSHOT = 0;
        INCREMENTAL_UPDATE = 1;
        CLEAR = 2;
    }
    ResponseType type = 2;
}

service MarketDataService {
    rpc StreamMarketData (stream SubscriptionRequest) returns (stream MarketDataResponse);
}

